Finished Header Content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@Mgkusumaputra</title>
 
+    <!-- Css -->
+    <link rel="stylesheet" href="style.css" />
+
     <!-- Font Awesome -->
     <script
       src="https://kit.fontawesome.com/3ffd4c8596.js"
@@ -19,8 +22,17 @@
       rel="stylesheet"
     />
   </head>
-  
-  <body>
 
+  <body>
+    <div class="main">
+      <div class="header">
+        <div class="avatar">
+          <img src="img/The New MGKPss.jpeg" alt="" />
+        </div>
+        <div class="username">
+          <h3>@Mgkusumaputra</h3>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
