Finished Long Button

--- a/index.html
+++ b/index.html
@@ -27,10 +27,26 @@
     <div class="main">
       <div class="header">
         <div class="avatar">
-          <img src="img/The New MGKPss.jpeg" alt="" />
+          <img  src="img/The New MGKPss.jpeg" alt="" />
         </div>
         <div class="username">
           <h3>@Mgkusumaputra</h3>
+        </div>
+      </div>
+
+      <!-- Main Content -->
+      <div class="main-content">
+
+      <!-- Long Button -->
+        <div class="long-button">
+            <a href="https://bit.ly/Mgkps-Gig" target="_blank" class="discord btn-ctrlr">
+            Jasa Buat Server Discord
+            </a>
+        </div>
+
+      <!-- Circle Button -->
+        <div class="circle-button">
+
         </div>
       </div>
     </div>
