--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="main">
       <div class="header">
         <div class="avatar">
-          <img  src="img/The New MGKPss.jpeg" alt="" />
+          <img src="img/The New MGKPss.jpeg" alt="" />
         </div>
         <div class="username">
           <h3>@Mgkusumaputra</h3>
@@ -36,17 +36,54 @@
 
       <!-- Main Content -->
       <div class="main-content">
-
-      <!-- Long Button -->
+        <!-- Long Button -->
         <div class="long-button">
-            <a href="https://bit.ly/Mgkps-Gig" target="_blank" class="discord btn-ctrlr">
+          <a
+            href="https://bit.ly/Mgkps-Gig"
+            target="_blank"
+            class="discord long-btn"
+          >
             Jasa Buat Server Discord
-            </a>
+          </a>
         </div>
 
-      <!-- Circle Button -->
+        <!-- Circle Button -->
         <div class="circle-button">
-
+          <div class="header-circle">
+            <p>Social Media</p>
+            <i class="fas fa-chevron-down"></i>
+          </div>
+          <div class="circle">
+            <ul>
+              <li class="github">
+                <a
+                  href="http://github.com/mgkusumaputra"
+                  class="fab fa-github"
+                ></a>
+              </li>
+              <li class="codepen">
+                <a href="https://codepen.io/Mgkps_" class="fab fa-codepen"></a>
+              </li>
+              <li class="instagram">
+                <a
+                  href="http://instagram.com/mgkusumaputra_0620"
+                  class="fab fa-instagram"
+                ></a>
+              </li>
+              <li class="twitter">
+                <a
+                  href="https://twitter.com/Garduu_"
+                  class="fab fa-twitter"
+                ></a>
+              </li>
+              <li class="Reddit">
+                <a
+                  href="https://www.reddit.com/user/Mgkps"
+                  class="fab fa-reddit"
+                ></a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
