--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </head>
 
   <body>
+    <!-- Main -->
     <div class="main">
       <div class="header">
         <div class="avatar">
@@ -86,6 +87,11 @@
           </div>
         </div>
       </div>
+    </div>
+    
+    <!-- Footer -->
+    <div class="footer">
+      <p>Made with ❤️ by <strong>Muhammad Garuda</strong></p>
     </div>
   </body>
 </html>
