--- a/index.html
+++ b/index.html
@@ -59,27 +59,34 @@
               <li class="github">
                 <a
                   href="http://github.com/mgkusumaputra"
+                  target="_blank"
                   class="fab fa-github"
                 ></a>
               </li>
               <li class="codepen">
-                <a href="https://codepen.io/Mgkps_" class="fab fa-codepen"></a>
+                <a href="https://codepen.io/Mgkps_" 
+                target="_blank"
+                class="fab fa-codepen"
+                ></a>
               </li>
               <li class="instagram">
                 <a
                   href="http://instagram.com/mgkusumaputra_0620"
+                  target="_blank"
                   class="fab fa-instagram"
                 ></a>
               </li>
               <li class="twitter">
                 <a
                   href="https://twitter.com/Garduu_"
+                  target="_blank"
                   class="fab fa-twitter"
                 ></a>
               </li>
               <li class="Reddit">
                 <a
                   href="https://www.reddit.com/user/Mgkps"
+                  target="_blank"
                   class="fab fa-reddit"
                 ></a>
               </li>
