Adding Spotify Profile & Spotify Playlist

--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
           >
             Jasa Buat Server Discord
           </a>
+          <a
+            href="https://open.spotify.com/playlist/4gB1AhUvgCz3uetG2e8KSp?si=10450ae259e443be"
+            target="_blank"
+            class="Spotify1 long-btn"
+          >
+            Tiktok Viral On Pandemic - Spotify
+          </a>
+          <a
+            href="https://bit.ly/bucin-mgkps"
+            target="_blank"
+            class="Spotify2 long-btn"
+          >
+            Bucin++ - Spotify
+          </a>
         </div>
 
         <!-- Circle Button -->
@@ -58,7 +72,7 @@
             <ul>
               <li class="github">
                 <a
-                  href="http://github.com/mgkusumaputra"
+                  href="https://github.com/mgkusumaputra"
                   target="_blank"
                   class="fab fa-github"
                 ></a>
@@ -71,7 +85,7 @@
               </li>
               <li class="instagram">
                 <a
-                  href="http://instagram.com/mgkusumaputra_0620"
+                  href="https://instagram.com/mgkusumaputra_0620"
                   target="_blank"
                   class="fab fa-instagram"
                 ></a>
@@ -83,11 +97,18 @@
                   class="fab fa-twitter"
                 ></a>
               </li>
-              <li class="Reddit">
+              <li class="reddit">
                 <a
                   href="https://www.reddit.com/user/Mgkps"
                   target="_blank"
                   class="fab fa-reddit"
+                ></a>
+              </li>
+              <li class="Spotify">
+                <a
+                  href="https://open.spotify.com/user/9ok3t5yqbjjxu2jas53zp79gs"
+                  target="_blank"
+                  class="fab fa-spotify"
                 ></a>
               </li>
             </ul>
