Adding Ui/Ux Project Preview

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
             Jasa Buat Server Discord
           </a>
           <a
+            href="https://instagram.com/project_mgkps"
+            target="_blank"
+            class="UiUx long-btn"
+          >
+            UI/UX Project Preview
+          </a>
+          <a
             href="https://open.spotify.com/playlist/4gB1AhUvgCz3uetG2e8KSp?si=10450ae259e443be"
             target="_blank"
             class="Spotify1 long-btn"
