--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
+        <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@Mgkusumaputra</title>
+    <title>@Your Username</title>
 
     <!-- Css -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Style/main.css" />
+    <link rel="stylesheet" href="./Style/SButton.css" />
 
     <!-- Font Awesome -->
     <script
@@ -22,107 +23,54 @@
       rel="stylesheet"
     />
   </head>
-
+  </head>
   <body>
-    <!-- Main -->
-    <div class="main">
+
+<div class="main">
+
+      <!-- Avatar -->
       <div class="header">
         <div class="avatar">
-          <img src="img/The New MGKPss.jpeg" alt="" />
+          <img src="https://www.blexar.com/avatar.png" alt="" />
         </div>
         <div class="username">
-          <h3>@Mgkusumaputra</h3>
+          <h3>@Your Username</h3>
         </div>
       </div>
 
-      <!-- Main Content -->
-      <div class="main-content">
+    <div class="main-content">
+
         <!-- Long Button -->
         <div class="long-button">
           <a
-            href="https://bit.ly/Mgkps-Gig"
+            href=""
             target="_blank"
-            class="discord long-btn"
+            class="long-btn"
           >
-            Jasa Buat Server Discord
-          </a>
-          <a
-            href="https://instagram.com/project_mgkps"
-            target="_blank"
-            class="UiUx long-btn"
-          >
-            UI/UX Project Preview
-          </a>
-          <a
-            href="https://open.spotify.com/playlist/4gB1AhUvgCz3uetG2e8KSp?si=10450ae259e443be"
-            target="_blank"
-            class="Spotify1 long-btn"
-          >
-            Tiktok Viral On Pandemic - Spotify
-          </a>
-          <a
-            href="https://bit.ly/bucin-mgkps"
-            target="_blank"
-            class="Spotify2 long-btn"
-          >
-            Bucin++ - Spotify
+            Content Long Button
           </a>
         </div>
 
-        <!-- Circle Button -->
+        <!-- Social Button -->
         <div class="circle-button">
           <div class="circle">
             <ul>
-              <li class="github">
-                <a
-                  href="https://github.com/mgkusumaputra"
-                  target="_blank"
-                  class="fab fa-github"
-                ></a>
-              </li>
-              <li class="codepen">
-                <a href="https://codepen.io/Mgkps_" 
-                target="_blank"
-                class="fab fa-codepen"
-                ></a>
-              </li>
               <li class="instagram">
-                <a
-                  href="https://instagram.com/mgkusumaputra_0620"
-                  target="_blank"
-                  class="fab fa-instagram"
-                ></a>
-              </li>
-              <li class="twitter">
-                <a
-                  href="https://twitter.com/Garduu_"
-                  target="_blank"
-                  class="fab fa-twitter"
-                ></a>
-              </li>
-              <li class="reddit">
-                <a
-                  href="https://www.reddit.com/user/Mgkps"
-                  target="_blank"
-                  class="fab fa-reddit"
-                ></a>
-              </li>
-              <li class="Spotify">
-                <a
-                  href="https://open.spotify.com/user/9ok3t5yqbjjxu2jas53zp79gs"
-                  target="_blank"
-                  class="fab fa-spotify"
+                <a href="" 
+                target="_blank"
+                class="fab fa-whatsapp"
                 ></a>
               </li>
             </ul>
           </div>
         </div>
-      </div>
+
     </div>
+  </div>
     
     <!-- Footer -->
     <div class="footer">
-      <p>Made with ❤️ by <strong>Muhammad Garuda</strong></p>
+      <p>Template crated by <strong>Muhammad Garuda</strong></p>
     </div>
   </body>
 </html>
